[tool.mypy]
files = ["src", "tests"]
ignore_missing_imports = true
strict = true

[tool.poetry]
name = "template"
version = "0.1.0"
description = "Template for new python projects."
authors = ["Brian DeRocher <brian@derocher.org>"]
packages = [
    { include = "src" },
    { include = "src/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.12.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "^0.931"
hypothesis = "^6.36.0"
pre-commit = "^2.17.0"
setuptools = "^60.5.0"
pytest-mock = "^3.7"

[tool.pylint.'MESSAGES CONTROL']
max-modules-lines = 1000
disable = [
    "missing-function-docstring", # C0116
]

[build-system]
# Need newer version to support PEP 660.
#requires = ["poetry-core>=1.0.0"]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "--verbose --doctest-modules -ra --cov src --cov-fail-under 100 --cov-report term --cov-report html"  # Consider adding --pdb
#doctest_optionflags = "IGNORE_EXCEPTION_DETAIL"
testpaths = [
    "tests",
]
